Правки для чекстайла